Designed the page using CSS

--- a/index.html
+++ b/index.html
@@ -34,5 +34,7 @@
             <a href="" id="downloadBtn" download="QR_Code.png">Download</a>
         </div>
     </div>
+    <script src="script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 </body>
 </html>
